--- a/src/locales/zh-cn/default.json
+++ b/src/locales/zh-cn/default.json
@@ -16,5 +16,6 @@
   "bridges": "Bridges",
   "events": "Events",
   "souSuo": "搜索",
-  "checkIfWindowIsMaximized": "判断窗口当前是否最大化"
+  "checkIfWindowIsMaximized": "判断窗口当前是否最大化",
+  "downloadPlugin": "下载插件"
 }
